--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/core": "^7.1.5",
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "classnames": "^2.2.6",
     "cross-env": "^5.2.0",
@@ -53,6 +54,9 @@
     "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
+  },
+  "standard": {
+    "parser": "babel-eslint"
   },
   "license": "MIT"
 }
