--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cssnano-preset-advanced": "^4.0.5",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
+    "font-awesome": "^4.7.0",
     "foundation-sites": "^6.5.0",
     "html-webpack-plugin": "^3.2.0",
     "incstr": "^1.2.3",
