--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test": "node_modules/standard/bin/cmd.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "express": "^4.16.4"
   },
@@ -51,6 +52,7 @@
     "sass-loader": "^7.1.0",
     "standard": "^12.0.1",
     "style-loader": "^0.23.1",
+    "superagent": "^4.0.0-beta.5",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
